--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+SAS code/SASData/hace1920_questions.sas7bdat
+SAS code/SASData/hace1920_strata_data.sas7bdat
+SAS code/SASData/hace1920_weighted.sas7bdat
