--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ vignettes/*.pdf
 SAS code/SASData/hace1920_questions.sas7bdat
 SAS code/SASData/hace1920_strata_data.sas7bdat
 SAS code/SASData/hace1920_weighted.sas7bdat
+*.csv
